Update tab spacing, banner size.  Minor text corrections.

--- a/tab.css
+++ b/tab.css
@@ -14,7 +14,7 @@ div.tab button {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 60px;
+    padding: 0.8% 3.4%;
     transition: 0.3s;
     font-size: 17px;
 }
